Issue #3144 - Fix for removal of class .form-group from Bootstrap 5.
Following, example in https://getbootstrap.com/docs/5.2/forms/overview/,
with use of .mb-3.

<form>
  <div class="mb-3">
    <label for="exampleInputEmail1" class="form-label">Email address</label>
    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
  </div>
  <div class="mb-3">
    <label for="exampleInputPassword1" class="form-label">Password</label>
    <input type="password" class="form-control" id="exampleInputPassword1">
  </div>
  <div class="mb-3 form-check">
    <input type="checkbox" class="form-check-input" id="exampleCheck1">
    <label class="form-check-label" for="exampleCheck1">Check me out</label>
  </div>
  <button type="submit" class="btn btn-primary">Submit</button>
</form>

--- a/app/views/contact_us/contacts/_new_left.html.erb
+++ b/app/views/contact_us/contacts/_new_left.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @contact, url: contacts_path do |f| %>
 <% if ContactUs.require_name %>
-    <div class="form-group">
+    <div class="form-group mb-3">
         <%= f.label(:name, _('Name'), class: 'control-label') %>
         <%= f.text_field(:name,
             class: "form-control",
@@ -9,7 +9,7 @@
             "aria-required": true) %>
     </div>
 <% end %>
-    <div class="form-group">
+    <div class="form-group mb-3">
         <%= f.label(:email, _('Email'), class: 'control-label') %>
         <%= f.email_field(:email,
             class: "form-control",
@@ -18,7 +18,7 @@
             "aria-required": true) %>
     </div>
 <% if ContactUs.require_subject %>
-    <div class="form-group">
+    <div class="form-group mb-3">
         <%= f.label(:subject, _('Subject')) %>
         <%= f.text_field(:subject,
             class: "form-control",
@@ -26,7 +26,7 @@
             "aria-required": true) %>
     </div>
 <% end %>
-    <div class="form-group">
+    <div class="form-group mb-3">
         <%= f.label(:message, _('Message')) %>
         <%= f.text_area(:message,
             class: "form-control",
@@ -35,7 +35,7 @@
             "aria-required": true) %>
     </div>
 <% if !user_signed_in? && Rails.configuration.x.recaptcha.enabled then %>
-    <div class="form-group">
+    <div class="form-group mb-3">
         <%= label_tag(nil, _('Security check')) %>
         <%= recaptcha_tags %>
     </div>
