--- a/app/views/org_admin/shared/_theme_selector.html.erb
+++ b/app/views/org_admin/shared/_theme_selector.html.erb
@@ -3,7 +3,7 @@
 <% required ||= false %>
 <% in_error ||= false %>
 
-<div class="form-group">
+<div class="form-group mb-3">
   <% if all_themes.length > 0 %>
     <%
       cntr = 0
