--- a/app/views/shared/_links.html.erb
+++ b/app/views/shared/_links.html.erb
@@ -24,21 +24,21 @@
       <% links.each_with_index do |l, i| %>
         <div class="link row">
           <div class="col-xs-5">
-            <div class="form-group link-input">
+            <div class="form-group mb-3 link-input">
               <%= label_tag "link_link#{i}", _('URL'), class: "control-label" %>
               <%= text_field_tag 'link_link', l['link'], class: "form-control",
                                                          id: "#{context}_link_link#{i}" %>
             </div>
           </div>
           <div class="col-xs-5">
-            <div class="form-group link-input">
+            <div class="form-group mb-3 link-input">
               <%= label_tag "link_text#{i}", _('Link text'), class: "control-label" %>
               <%= text_field_tag 'link_text', l['text'], class: "form-control",
                                                          id: "#{context}link_text#{i}" %>
             </div>
           </div>
           <div class="col-xs-2">
-            <div class="form-group">
+            <div class="form-group mb-3">
               <a href="#" class="delete" aria-label="<%= _('Remove this link') %>">
                 <i class="fas fa-times-circle fa-reverse" aria-hidden="true"></i>
               </a>
