--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -11,24 +11,24 @@
     <%= form_for resource, as: resource_name, url: invitation_path(resource_name), html: {method: :put, id: "invitation_create_account_form"} do |f| %>
       <%= devise_error_messages! %>
       <%= f.hidden_field :invitation_token %>
-      <div class="form-group">
+      <div class="form-group mb-3">
         <%= f.label(:password, _('New password'), class: 'control-label') %>
         <%= f.password_field(:password, class: 'form-control', "aria-required": true) %>
       </div>
-      <div class="form-group">
+      <div class="form-group mb-3">
         <%= f.label(:password_confirmation, _('Password confirmation'), class: 'control-label') %>
         <%= f.password_field(:password_confirmation, class: 'form-control', "aria-required": true) %>
       </div>
-      <div class="form-group">
+      <div class="form-group mb-3">
         <%= f.label(:firstname, _('First name'), class: 'control-label') %>
         <%= f.text_field(:firstname, class: "form-control", "aria-required": true,
                          spellcheck: true, value: @user.firstname) %>
       </div>
-      <div class="form-group">
+      <div class="form-group mb-3">
         <%= f.label(:surname, _('Last name'), class: 'control-label') %>
         <%= f.text_field(:surname, class: "form-control", "aria-required": true, value: @user.surname) %>
       </div>
-      <div class="form-group" id="invite-org-controls">
+      <div class="form-group mb-3" id="invite-org-controls">
         <%= render partial: @org_partial,
                    locals: {
                      form: f,
