--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -14,7 +14,7 @@
 <div class="row">
   <div class="col-md-12">
     <%= form_for resource, as: 'user', url: user_password_path, html: {method: :post, id: "user_request_reset_password_form"} do |f| %>
-      <div class="form-group">
+      <div class="form-group mb-3">
         <%= f.label(:email, _('Email'), class: 'control-label') %>
         <%= f.email_field(:email, class: 'form-control', "aria-required": true) %>
       </div>
