--- a/app/views/devise/registrations/_password_confirmation.html.erb
+++ b/app/views/devise/registrations/_password_confirmation.html.erb
@@ -7,7 +7,7 @@
       <div id="confirmation" class="modal-body">
         <div id="email-change">
           <p><%= _('Your email address is also your login id and therefore an important part of your account information. For your safety we require you to confirm your password to make this change.') %></p>
-          <div class="form-group">
+          <div class="form-group mb-3">
             <%= f.label :current_password, _('Password'), class: 'control-label', for: 'current_password' %>
             <%= f.password_field :current_password, class: 'form-control', id: 'current_password' %>
             <%= f.password_field :password, class: 'hide' %>
@@ -18,7 +18,7 @@
           <p>
             <%= _('Are you sure you want to change your organisational affiliation? Doing so will remove your administrative privileges.') %>
           </p>
-          <div class="form-group">
+          <div class="form-group mb-3">
             <label class="control-label"><%= _('Organisation') %></label>
           </div>
           <div class="checkbox">
