--- a/app/views/layouts/modal_search/_form.html.erb
+++ b/app/views/layouts/modal_search/_form.html.erb
@@ -49,13 +49,13 @@ no_results_msg = _("No results matched your filter criteria.")
         <%# Search filters %>
         <%= form_with model: model_instance, url: search_path, method: search_method, local: false,
                       id: "modal-search-#{namespace}-filters" do |f| %>
-          <div class="form-group row">
+          <div class="form-group mb-3 row">
             <div class="col-md-10">
               <%= yield :"filters-#{namespace}" %>
             </div>
           </div>
 
-          <div class="form-group row">
+          <div class="form-group mb-3 row">
             <div class="col-md-10">
               <span class="col-md-10">
                 <%= f.text_field :search_term,
@@ -73,7 +73,7 @@ no_results_msg = _("No results matched your filter criteria.")
         <% end %>
 
         <%# Search Results %>
-        <div id="modal-search-<%= namespace %>-results" class="form-group row modal-search-results">
+        <div id="modal-search-<%= namespace %>-results" class="form-group mb-3 row modal-search-results">
           <div class="col-md-12">
             <div class="col-md-12"><%= no_results_msg %></div>
           </div>
