--- a/app/views/org_admin/phases/_form.html.erb
+++ b/app/views/org_admin/phases/_form.html.erb
@@ -1,13 +1,13 @@
 <% title_tooltip = _('Enter a title for the phase e.g. initial DMP, full DMP... This is what users will see in the tabs when completing a plan. If you only have one phase, call it something generic e.g. Glasgow DMP') %>
 
 <%= f.hidden_field :template_id, value: template.id%>
-<div class="form-group col-md-10">
+<div class="form-group mb-3 col-md-10">
   <%= f.label(:title, _('Title') ,class: "control-label") %>
   <em class="sr-only"><%= title_tooltip %></em>
   <%= f.text_field(:title, class: "form-control", spellcheck: true, 'aria-required': true, 'data-toggle': 'tooltip', title: title_tooltip ) %>
 </div>
 
-<div class="form-group">
+<div class="form-group mb-3">
   <div class="col-md-10">
     <%= f.label(:number, _('Order of display'), class: "control-label") %>
   </div>
@@ -16,11 +16,11 @@
   </div>
 </div>
 
-<div class="form-group col-md-10" data-toggle="tooltip" title="<%= _("Enter a basic description. This will be presented to users on the 'Admin Plan' tab, above the summary of the sections and questions which they will be asked to answer.") %>">
+<div class="form-group mb-3 col-md-10" data-toggle="tooltip" title="<%= _("Enter a basic description. This will be presented to users on the 'Admin Plan' tab, above the summary of the sections and questions which they will be asked to answer.") %>">
   <%= f.label(:description, _('Description'), class: "control-label") %>
   <%= f.text_area(:description, class: "phase", spellcheck: true) %>
 </div>
 
-<div class="form-group col-md-4 pull-right">
+<div class="form-group mb-3 col-md-4 pull-right">
   <%= f.button(_('Save'), class: 'btn btn-default', type: "submit") %>
 </div>
