--- a/app/views/org_admin/questions/_show.html.erb
+++ b/app/views/org_admin/questions/_show.html.erb
@@ -204,7 +204,7 @@
                                locals: { f: annotation_fields } %>
                   <% end %>
                 <% end %>
-                <div class="form-group col-md-10">
+                <div class="form-group mb-3 col-md-10">
                   <div class="pull-right">
                     <%= f.submit _('Save'), class: "btn btn-default", role: 'button' %>
                   </div>
@@ -213,7 +213,7 @@
             <% end %>
           <% end %>
           <% if section.modifiable? %>
-            <div class="form-group col-md-10">
+            <div class="form-group mb-3 col-md-10">
               <div class="pull-right">
                 <%= link_to _('Edit'), edit_org_admin_template_phase_section_question_path(template_id: question.section.phase.template.id, phase_id: question.section.phase.id, section_id: question.section.id, id: question.id), class: "btn btn-default ajaxified-question", remote: true %>
               </div>
