--- a/app/views/org_admin/sections/_form.html.erb
+++ b/app/views/org_admin/sections/_form.html.erb
@@ -1,18 +1,18 @@
 <% description_tooltip = _("Enter a basic description. This could be a summary of what is covered in the section or instructions on how to answer. This text will be displayed in the coloured banner once a section is opened to edit.") %>
 
 <%= form_for(section, url: url, namespace: section.id.present? ? "sc_#{section.id}" : 'new_section', html: { method: method }) do |f| %>
-  <div class="form-group col-md-10">
+  <div class="form-group mb-3 col-md-10">
     <%= f.label(:title, _('Title') ,class: "control-label") %>
     <%= f.text_field(:title, { class: "form-control", placeholder: _('Enter a title for the section'), 'data-toggle': 'tooltip', title: _('Enter a title for the section'), spellcheck: true, 'aria-required': true} ) %>
   </div>
 
-  <div class="form-group col-md-10" data-toggle="tooltip" title="<%= description_tooltip %>">
+  <div class="form-group mb-3 col-md-10" data-toggle="tooltip" title="<%= description_tooltip %>">
     <em class="sr-only"><%= description_tooltip %></em>
     <%= f.label(:description, _('Description'), class: "control-label") %>
     <%= f.text_area(:description, class: "section") %>
   </div>
 
-  <div class="form-group col-md-10">
+  <div class="form-group mb-3 col-md-10">
     <div class="pull-right">
       <%= f.button(_('Save'), class: 'btn btn-default', type: "submit") %>
       <% if section.id.present? %>
