--- a/app/views/org_admin/templates/_form.html.erb
+++ b/app/views/org_admin/templates/_form.html.erb
@@ -1,11 +1,11 @@
 <% description_tooltip = _('Enter a description that helps you to differentiate between templates e.g. if you have ones for different audiences') %>
 
-<div class="form-group col-xs-8">
+<div class="form-group mb-3 col-xs-8">
   <%= f.label(:title, _('Title'), class: "control-label") %>
   <%= f.text_field(:title, class: "form-control", spellcheck: true, "aria-required": true) %>
 </div>
 
-<div class="form-group col-xs-8" data-toggle="tooltip" title="<%=  description_tooltip %>">
+<div class="form-group mb-3 col-xs-8" data-toggle="tooltip" title="<%=  description_tooltip %>">
   <em class="sr-only"><%= description_tooltip %></em>
   <%= f.label(:description, _('Description'), class: "control-label") %>
   <%= f.text_area(:description, class: "template", spellcheck: true) %>
@@ -13,7 +13,7 @@
 
 <% if current_user.org.funder? && !current_user.org.funder_only? %>
   <!-- If the Org is a funder and another org type then allow then to set the visibility -->
-  <div class="form-group col-xs-8">
+  <div class="form-group mb-3 col-xs-8">
     <%= f.label _('Visibility'), class: 'control-label' %>
     <%= render partial: 'shared/popover',
                locals: { message: _('Checking this box prevents the template from appearing in the public list of templates.'),
@@ -34,7 +34,7 @@
   <%= f.hidden_field :visibility, value: visibility %>
 <% end %>
 
-<div class="form-group col-xs-8">
+<div class="form-group mb-3 col-xs-8">
   <%= label_tag(:status, _('Status'), class: "control-label") %>
     <p class="form-control-static">
       <% if f.object.published? %>
@@ -48,13 +48,13 @@
 </div>
 
 <% if f.object.id.present? %>
-  <div class="form-group col-xs-8">
+  <div class="form-group mb-3 col-xs-8">
     <%= label_tag(:created_at, _('Created at'), class: "control-label") %>
     <p class="form-control-static">
       <%= l f.object.created_at.to_date, formats: :short %>
     </p>
   </div>
-  <div class="form-group col-xs-8">
+  <div class="form-group mb-3 col-xs-8">
     <%= label_tag(:updated, _('Last updated'), class: "control-label") %>
     <p class="form-control-static">
       <%= l f.object.updated_at.to_date, formats: :short %>
@@ -84,6 +84,6 @@
   <%= hidden_field_tag('template-links', ActiveSupport::JSON.encode(f.object.links)) %>
 <% end %>
 
-<div class="form-group col-xs-8">
+<div class="form-group mb-3 col-xs-8">
   <%= f.button(_('Save'), class: 'btn btn-default', type: "submit") %>
 </div>
