--- a/app/views/orgs/_external_identifiers.html.erb
+++ b/app/views/orgs/_external_identifiers.html.erb
@@ -14,7 +14,7 @@
     end
     schemes.each do |scheme| %>
       <div class="row">
-        <div class="form-group col-xs-10">
+        <div class="form-group mb-3 col-xs-10">
           <% id = presenter.id_for_scheme(scheme: scheme) %>
           <span class="bold"><%= scheme.description %>:</span>
           <%= id_for_display(id: id) %>
@@ -31,7 +31,7 @@
     %>
       <br>
       <div class="row">
-        <div class="form-group col-xs-6">
+        <div class="form-group mb-3 col-xs-6">
           <%= form.fields_for :identifiers, shib_id do |ident_fields| %>
             <%= ident_fields.hidden_field :identifier_scheme_id %>
             <%= ident_fields.label :value, "#{shib.description} - entityID", class: "control-label" %>
@@ -43,7 +43,7 @@
 
   <% else %>
     <div class="row">
-       <div id="org-details-org-controls" class="form-group col-xs-10">
+       <div id="org-details-org-controls" class="form-group mb-3 col-xs-10">
          <%= render partial: "shared/org_selectors/external_only",
                 locals: {
                   form: form,
@@ -59,7 +59,7 @@
 <% else %>
   <% presenter.schemes.each do |scheme| %>
     <div class="row">
-      <div class="form-group col-xs-10">
+      <div class="form-group mb-3 col-xs-10">
         <% id = presenter.id_for_scheme(scheme: scheme) %>
         <span class="bold"><%= scheme.description %>:</span>
         <%= id_for_display(id: id) %>
