--- a/app/views/orgs/shibboleth_ds.html.erb
+++ b/app/views/orgs/shibboleth_ds.html.erb
@@ -8,7 +8,7 @@
 <div class="row">
   <div class="col-md-12">
     <%= form_for 'shibboleth_ds', url: shibboleth_ds_path, namespace: 'shib-ds', html: {id: 'shibboleth_ds'} do |f| %>
-      <div class="form-group col-xs-8">
+      <div class="form-group mb-3 col-xs-8">
         <%= f.label(:org_name, _('Look up your organisation here'), class: "control-label") %>
 
         <% if @orgs.length <= 10 %>
