--- a/app/views/questions/_new_edit_question_datefield.html.erb
+++ b/app/views/questions/_new_edit_question_datefield.html.erb
@@ -1,5 +1,5 @@
 <%# locals: { f, question, answer } %>
-<div class="form-group">
+<div class="form-group mb-3">
     <%= f.label(:text, sanitize(question.text), class: 'control-label') %>
     <%= date_field_tag('answer[text]', strip_tags(answer.text || question.default_value), class: 'form-control') %>
 </div>
