--- a/app/views/research_outputs/_form.html.erb
+++ b/app/views/research_outputs/_form.html.erb
@@ -9,7 +9,7 @@ repository_tooltip = _("Repositories preserve, manage, and provide access to man
 %>
 
 <%= form_with model: @research_output, url: path, method: method, local: true do |f| %>
-  <div class="form-group row">
+  <div class="form-group mb-3 row">
     <div class="col-md-12">
       <span class="col-md-3"><%= label(:output_type, _("Type"), class: "control-label") %></span>
       <span class="col-md-5 output-type-description <%= research_output.other? ? "" : "hidden" %>">
@@ -35,7 +35,7 @@ repository_tooltip = _("Repositories preserve, manage, and provide access to man
     </div>
   </div>
 
-  <div class="form-group row">
+  <div class="form-group mb-3 row">
     <div class="col-md-12">
       <span class="col-md-6">
         <%= f.label(:title, _("Title"), class: "control-label") %>
@@ -54,7 +54,7 @@ repository_tooltip = _("Repositories preserve, manage, and provide access to man
       </span>
     </div>
   </div>
-  <div class="form-group row">
+  <div class="form-group mb-3 row">
     <div class="col-md-12">
       <span class="col-md-12"><%= f.label(:description, _("Description"), class: "control-label", id: 'research-output-description') %></span>
     </div>
@@ -65,7 +65,7 @@ repository_tooltip = _("Repositories preserve, manage, and provide access to man
     </div>
   </div>
 
-  <div class="form-group row">
+  <div class="form-group mb-3 row">
     <div class="col-md-12">
       <span class="col-md-4">
         <%= f.label :sensitive_data do %>
@@ -84,7 +84,7 @@ repository_tooltip = _("Repositories preserve, manage, and provide access to man
   </div>
 
   <% if Rails.configuration.x.madmp.enable_repository_selection && Repository.all.any? %>
-    <div class="form-group row">
+    <div class="form-group mb-3 row">
       <div class="col-md-12">
         <span class="col-md-12">
           <h3><%= label_tag _("Intended repositories") %></h3>
@@ -92,7 +92,7 @@ repository_tooltip = _("Repositories preserve, manage, and provide access to man
       </div>
     </div>
 
-    <div class="form-group row">
+    <div class="form-group mb-3 row">
       <%= render partial: "layouts/modal_search/selections",
                 locals: {
                   namespace: "repositories",
@@ -108,14 +108,14 @@ repository_tooltip = _("Repositories preserve, manage, and provide access to man
   <% end %>
 
   <% if Rails.configuration.x.madmp.enable_metadata_standard_selection && MetadataStandard.all.any? %>
-    <div class="form-group row">
+    <div class="form-group mb-3 row">
       <div class="col-md-12">
         <span class="col-md-12">
           <h3><%= f.label(:metadata_standard, _("Metadata standards"), class: "control-label") %></h3>
         </span>
       </div>
     </div>
-    <div class="form-group row">
+    <div class="form-group mb-3 row">
       <%= render partial: "layouts/modal_search/selections",
                 locals: {
                   namespace: "metadata_standards",
@@ -130,7 +130,7 @@ repository_tooltip = _("Repositories preserve, manage, and provide access to man
     </div>
   <% end %>
 
-  <div class="form-group row">
+  <div class="form-group mb-3 row">
     <div class="col-md-12">
       <span class="col-md-4">
         <%= f.label(:release_date, _("Anticipated release date"), class: "control-label") %>
@@ -146,13 +146,13 @@ repository_tooltip = _("Repositories preserve, manage, and provide access to man
   </div>
 
   <% if Rails.configuration.x.madmp.enable_license_selection && License.all.any? %>
-    <div class="form-group row license-selection">
+    <div class="form-group mb-3 row license-selection">
       <%= render partial: "research_outputs/licenses/form",
                 locals: { research_output: research_output, presenter: presenter } %>
     </div>
   <% end %>
 
-  <div class="form-group row file-details-section <%= presenter.byte_sizable? ? "" : "hidden" %>">
+  <div class="form-group mb-3 row file-details-section <%= presenter.byte_sizable? ? "" : "hidden" %>">
     <div class="col-md-12">
       <span class="col-md-3">
         <%= f.label(:byte_size, _("Anticipated file size"), class: "control-label") %>
@@ -172,7 +172,7 @@ repository_tooltip = _("Repositories preserve, manage, and provide access to man
     </div>
   </div>
 
-  <div class="form-group row">
+  <div class="form-group mb-3 row">
     <div class="col-md-12">
       <div class="col-md-6">
         <%= f.button(_("Save"), class: "btn btn-default", type: "submit") %>
