--- a/app/views/super_admin/themes/_form.html.erb
+++ b/app/views/super_admin/themes/_form.html.erb
@@ -1,11 +1,11 @@
 <% url = @theme.new_record? ? super_admin_themes_path : super_admin_theme_path(@theme) %>
 
  <%= form_for @theme, url: url, html: { class: 'theme' } do |f| %>
-   <div class="form-group">
+   <div class="form-group mb-3">
      <%= f.label(:title, _('Title'), class: 'control-label') %>
      <%= f.text_field(:title, class: "form-control", spellcheck: true, "aria-required": true) %>
    </div>
-   <div class="form-group">
+   <div class="form-group mb-3">
      <%= f.label(:description, _('Guidance')) %>
      <%= f.text_area(:description, class: "form-control", rows: 10, spellcheck: true) %>
    </div>
